# ars

./: .env  .gitignore  Dockerfile  README.md  app.py  kaggle.json  kaggle.sh  pyproject.toml  report.md  requirements.txt
src/: demo.py  main.py  rag.py  utils.py
