[tool.poetry]
name = "ars"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.2"
langchain-community = "^0.2.3"
langchain-experimental = "^0.0.60"
transformers = "^4.41.2"
sentence-transformers = "^3.0.0"
pandas = "^2.2.2"
streamlit = "^1.35.0"
tiktoken = "^0.7.0"
chromadb = "^0.5.0"
qdrant-client = "^1.9.1"
kaggle = "^1.6.14"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.8.0"
openai = "^1.31.2"
autoevals = "^0.0.68"
langsmith = "^0.1.74"
litellm = {extras = ["proxy"], version = "^1.37.19" }
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
